fixing some layout issues with profile page

--- a/celebrityFitnessProject/src/app/components/cart/cart.component.scss
+++ b/celebrityFitnessProject/src/app/components/cart/cart.component.scss
@@ -64,7 +64,7 @@ p.name{
     position: relative;
     overflow-y: scroll;
     // overflow: visible;
-    height: 20.5rem;
+    height: 20.3rem;
     width: 100%;
     border-radius: 0.8rem;
     background-color: rgb(215, 215, 215);
@@ -302,8 +302,8 @@ p.payment{
   }
   
   .largeImagePreview img {
-    width: 180px;
-    height: 180px;
+    width: 300px;
+    height: 300px;
     object-fit: cover;
     // box-shadow: 0 0 0 16px rgb(236, 236, 236), 0 5px 15px rgba(0, 0, 0, 0.3);
     // transition: 
