--- a/celebrityFitnessProject/src/app/components/profile/profile.component.scss
+++ b/celebrityFitnessProject/src/app/components/profile/profile.component.scss
@@ -283,6 +283,7 @@ fieldset {
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  // overflow: visible;
   // padding-right: 2rem;
 }
 
@@ -465,7 +466,7 @@ fieldset {
   width: 50vw;
   min-width: 680px;
   max-width: 700px;
-  min-height: fit-content;
+  min-height: 100%;
   max-height: 51rem;
   height: 100%;
   aspect-ratio: 3/5;
@@ -1027,8 +1028,8 @@ input:disabled:-moz-placeholder {
   // position: absolute;
   // margin: auto;
   // z-index: 1;
-  width: fit-content;
-  height: fit-content;
+  width: 100%;
+  height: 100%;
   // padding: 2rem;
   // max-height: 51rem;
   // overflow: hidden;
@@ -1830,7 +1831,7 @@ input[matInput]:focus {
   }
 
   .cancelSubscription {
-    margin: auto;
+    // margin: auto;
     width: 100%;
     // max-width: 110px;
     // max-width: auto;
@@ -2090,7 +2091,7 @@ input[matInput]:focus {
   }
 
   .absoluteContainer {
-    position: absolute;
+    position: relative;
     // top: -10rem;
     // left: auto;
     // right: -7.5rem;
